# serde-gff

./: Cargo.toml  readme.md
src/: de.rs  error.rs  header.rs  index.rs  label.rs  lib.rs  raw.rs  resref.rs  sig.rs  string.rs  value.rs  ver.rs
src/de/: mod.rs  string.rs  value.rs
src/parser/: mod.rs  states.rs  token.rs
src/ser/: mod.rs  value.rs
test-data/: all.gff  empty.gff
