[package]
name = "serde-gff"
version = "0.1.2"
authors = ["Mingun <Alexander_Sergey@mail.ru>"]
description = "https://github.com/Mingun/serde-gff"
repository = "https://github.com/Mingun/serde-gff"
readme = "readme.md"
license = "MIT"
keywords = ["serde", "gff", "serialization", "bioware", "parser"]
categories = ["encoding", "game-engines", "parser-implementations"]

[dependencies]
byteorder = "1.2.7"
encoding = "0.2.33"
indexmap = "1.0.2"
serde = "1.0.82"

[dev-dependencies]
serde_bytes = "0.10.4"
serde_derive = "1.0.82"
