[package]
name = "serde-gff"
version = "0.3.0"
authors = ["Mingun <Alexander_Sergey@mail.ru>"]
description = "https://github.com/Mingun/serde-gff"
repository = "https://github.com/Mingun/serde-gff"
readme = "readme.md"
license = "MIT"
keywords = ["serde", "gff", "serialization", "bioware", "parser"]
categories = ["encoding", "game-engines", "parser-implementations"]

[dependencies]
byteorder = "1.3"
encoding = "0.2"
indexmap = "1.3"
serde = "1.0"

[dev-dependencies]
serde_bytes = "0.11"
serde_derive = "1.0"
